# kontex_promt

./: .gitignore  CLAUDE.md  INSTALLATION.md  MANAGER_GUIDE.md  README.md  __init__.py  kontext.txt  kontext_node.py  package.json  pyproject.toml  requirements.txt  template_manager.py  templates.json  test_import.py  test_node.py  user_templates.json  verify_nodes.py
.claude/: settings.local.json
